 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

Pig Change Log

Trunk (unreleased changes)
 
INCOMPATIBLE CHANGES
 
IMPROVEMENTS
PIG-5460: Allow Tez to be launched from mapreduce job (knoguchi)

PIG-5454: Make ParallelGC the default Garbage Collection (knoguchi)

PIG-5438: Update SparkCounter.Accumulator to AccumulatorV2 (knoguchi)

PIG-5439: Support Spark 3 and drop SparkShim (knoguchi)

PIG-5455: Upgrade Hadoop to 3.3.6 and Tez to 0.10.3 (knoguchi)

PIG-5456: Upgrade Spark to 3.4.3 (knoguchi)

PIG-5457: Upgrade Zookeeper to 3.7.2 (from 3.5.7)  (knoguchi)
 
OPTIMIZATIONS
 
BUG FIXES
PIG-5449: TestEmptyInputDir failing on pig-on-spark3 (knoguchi)

PIG-5459: Jython_Checkin_3 e2e failing with NoClassDefFoundError (hadoop3) (knoguchi)

PIG-5416: Spark unit tests failing randomly with "java.lang.RuntimeException: Unexpected job execution status RUNNING" (knoguchi)

PIG-5447: Pig-on-Spark TestSkewedJoin.testSkewedJoinOuter failing with NoSuchElementException (knoguchi)

PIG-5448: All TestHBaseStorage tests failing on pig-on-spark3 (knoguchi)

PIG-5446: Tez TestPigProgressReporting.testProgressReportingWithStatusMessage failing (knoguchi)

PIG-5450: Pig-on-Spark3 E2E ORC test failing with java.lang.VerifyError: Bad return type (knoguchi)

PIG-5452: Null handling of FLATTEN with user defined schema (as clause) (knoguchi)

Release 0.18.0 - Unreleased
 
INCOMPATIBLE CHANGES

PIG-5282: Upgade to Java 8 (satishsaley via rohini)
 
IMPROVEMENTS

PIG-5437: Add lib and idea folder to .gitignore (maswin via rohini)

PIG-5436: update owasp version (knoguchi via rohini)

PIG-5434: Migrate from log4j to reload4j (rohini)

PIG-5417: Replace guava's Files.createTempDir() (xiaoheipangzi via rohini)

PIG-5429: Update hbase version from 2.0.0 to 2.4.14 (knoguchi)
